# Stardust-Defenders

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
include/: alien.h  asteroid.h  bullet.h  bullet_manager.h  combat_manager.h  enemy.h  enemy_manager.h  entity.h  game.h  gui_manager.h  input_manager.h  player.h  player_manager.h  projectile.h  resource_manager.h  window_manager.h  world_manager.h
include/constants/: constants_asteroid.h  constants_enemy.h  constants_game.h
include/entities/: alien.h  asteroid.h  bullet.h  enemy.h  entity.h  laser.h  player.h  projectile.h
include/interfaces/: damageable.h  drawable.h  movable.h
include/managers/: bullet_manager.h  combat_manager.h  enemy_manager.h  gui_manager.h  input_manager.h  player_manager.h  projectile_manager.h  resource_manager.h  window_manager.h  world_manager.h
src/: alien.cpp  asteroid.cpp  bullet.cpp  bullet.h  bullet_manager.cpp  combat_manager.cpp  enemy.cpp  enemy.h  enemy_manager.cpp  entity.cpp  game.cpp  game.h  gui_manager.cpp  input_manager.cpp  main.cpp  player.cpp  player.h  player_manager.cpp  projectile.cpp  resource_manager.cpp  window_manager.cpp  world_manager.cpp
src/entities/: alien.cpp  asteroid.cpp  bullet.cpp  enemy.cpp  entity.cpp  laser.cpp  player.cpp  projectile.cpp
src/managers/: bullet_manager.cpp  combat_manager.cpp  enemy_manager.cpp  gui_manager.cpp  input_manager.cpp  player_manager.cpp  projectile_manager.cpp  resource_manager.cpp  window_manager.cpp  world_manager.cpp
